test/ll_parser_explicit_subexpression_test.test
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `;'
     OF SUBTYPE ll::parser::table::indentation_separator_type
BRACKETED EXPRESSION: SHORT_OBJ; line 11:
This is a line;
^^^^^^^^^^^^^^^
BRACKETED EXPRESSION: SHORT_OBJ; line 12:
This is a line containing a "quoted string".
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
BRACKETED EXPRESSION: SHORT_OBJ; lines 13-14:
This is a line containing a large number
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     12345678901234567890.
^^^^^^^^^^^^^^^^^^^^^^^^^^
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `('
     OF SUBTYPE ll::parser::table::opening_bracket_type
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `)'
     OF SUBTYPE ll::parser::table::closing_bracket_type
BRACKETED EXPRESSION: SHORT_OBJ; line 16:
     ( hi there ).
     ^^^^^^^^^^^^
BRACKETED EXPRESSION: SHORT_OBJ; lines 15-16:
This is a line containing a parenthesized subexpression
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     ( hi there ).
^^^^^^^^^^^^^^^^^^
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `('
     OF SUBTYPE ll::parser::table::opening_bracket_type
EXPLICIT SUBEXPRESSION PARSER FOUND KEY ``'
     OF SUBTYPE ll::parser::table::opening_bracket_type
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `{'
     OF SUBTYPE ll::parser::table::opening_bracket_type
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `}'
     OF SUBTYPE ll::parser::table::closing_bracket_type
BRACKETED EXPRESSION: SHORT_OBJ; line 18:
     (x + `y z {p q}' - [ g h ]).
               ^^^^^
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `''
     OF SUBTYPE ll::parser::table::closing_bracket_type
BRACKETED EXPRESSION: SHORT_OBJ; line 18:
     (x + `y z {p q}' - [ g h ]).
          ^^^^^^^^^^^
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `['
     OF SUBTYPE ll::parser::table::opening_bracket_type
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `]'
     OF SUBTYPE ll::parser::table::closing_bracket_type
BRACKETED EXPRESSION: SHORT_OBJ; line 18:
     (x + `y z {p q}' - [ g h ]).
                        ^^^^^^^
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `)'
     OF SUBTYPE ll::parser::table::closing_bracket_type
BRACKETED EXPRESSION: SHORT_OBJ; line 18:
     (x + `y z {p q}' - [ g h ]).
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
BRACKETED EXPRESSION: SHORT_OBJ; lines 17-18:
This line contains subsubexpressions
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     (x + `y z {p q}' - [ g h ]).
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `('
     OF SUBTYPE ll::parser::table::opening_bracket_type
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `{'
     OF SUBTYPE ll::parser::table::opening_bracket_type
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `)'
     OF SUBTYPE ll::parser::table::closing_bracket_type
ERROR: missing closing bracket `}' inserted before line 20:
     (x + { y z )
                ^
BRACKETED EXPRESSION: SHORT_OBJ; line 20:
     (x + { y z )
          ^^^^^
BRACKETED EXPRESSION: SHORT_OBJ; line 20:
     (x + { y z )
     ^^^^^^^^^^^^
BRACKETED EXPRESSION: SHORT_OBJ; lines 19-20:
This line contains a missing closing bracket
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     (x + { y z )
^^^^^^^^^^^^^^^^^
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `('
     OF SUBTYPE ll::parser::table::opening_bracket_type
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `}'
     OF SUBTYPE ll::parser::table::closing_bracket_type
ERROR: spurious closing bracket `}' found and ignored; line 22:
     (x + y }
            ^
ERROR: missing closing bracket `)' inserted before line 22:
     (x + y }
             ^
BRACKETED EXPRESSION: SHORT_OBJ; line 22:
     (x + y }
     ^^^^^^
BRACKETED EXPRESSION: SHORT_OBJ; lines 21-22:
This line contains an incorrect closing bracket
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     (x + y }
^^^^^^^^^^^
ERROR: lexeme indent 1 too near paragraph indent 0; line 24:
 a token with insufficient indent
 ^
BRACKETED EXPRESSION: SHORT_OBJ; lines 23-24:
This line includes
^^^^^^^^^^^^^^^^^^
 a token with insufficient indent
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `:'
     OF SUBTYPE ll::parser::table::indentation_mark_type
BRACKETED EXPRESSION: SHORT_OBJ; line 26:
   First line.
   ^^^^^^^^^^^
BRACKETED EXPRESSION: SHORT_OBJ; line 27:
   Second line.
   ^^^^^^^^^^^^
BRACKETED EXPRESSION: SHORT_OBJ; lines 25-27:
This line starts in indented paragraph:
                                      ^
   First line.
^^^^^^^^^^^^^^
   Second line.
^^^^^^^^^^^^^^^
BRACKETED EXPRESSION: SHORT_OBJ; lines 25-27:
This line starts in indented paragraph:
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   First line.
^^^^^^^^^^^^^^
   Second line.
^^^^^^^^^^^^^^^
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `:'
     OF SUBTYPE ll::parser::table::indentation_mark_type
BRACKETED EXPRESSION: SHORT_OBJ; line 29:
   Third line.
   ^^^^^^^^^^^
BRACKETED EXPRESSION: SHORT_OBJ; line 30:
   Fourth line.
   ^^^^^^^^^^^^
BRACKETED EXPRESSION: SHORT_OBJ; lines 28-30:
Ditto with split =:
                  ^
   Third line.
^^^^^^^^^^^^^^
   Fourth line.
^^^^^^^^^^^^^^^
BRACKETED EXPRESSION: SHORT_OBJ; lines 28-30:
Ditto with split =:
^^^^^^^^^^^^^^^^^^^
   Third line.
^^^^^^^^^^^^^^
   Fourth line.
^^^^^^^^^^^^^^^
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `:'
     OF SUBTYPE ll::parser::table::indentation_mark_type
BRACKETED EXPRESSION: SHORT_OBJ; line 32:
   Fifth line.
   ^^^^^^^^^^^
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `;'
     OF SUBTYPE ll::parser::table::indentation_separator_type
EXPLICIT SUBEXPRESSION PARSER REJECTED KEY `;'
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `;'
     OF SUBTYPE ll::parser::table::indentation_separator_type
BRACKETED EXPRESSION: SHORT_OBJ; line 33:
   Sixth line A; Sixth line B
   ^^^^^^^^^^^^^
BRACKETED EXPRESSION: SHORT_OBJ; line 33:
   Sixth line A; Sixth line B
                 ^^^^^^^^^^^^
BRACKETED EXPRESSION: SHORT_OBJ; line 34:
   Seventh line.
   ^^^^^^^^^^^^^
BRACKETED EXPRESSION: SHORT_OBJ; lines 31-34:
Ditto with separator:
                    ^
   Fifth line.
^^^^^^^^^^^^^^
   Sixth line A; Sixth line B
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   Seventh line.
^^^^^^^^^^^^^^^^
BRACKETED EXPRESSION: SHORT_OBJ; lines 31-34:
Ditto with separator:
^^^^^^^^^^^^^^^^^^^^^
   Fifth line.
^^^^^^^^^^^^^^
   Sixth line A; Sixth line B
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   Seventh line.
^^^^^^^^^^^^^^^^
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `:'
     OF SUBTYPE ll::parser::table::indentation_mark_type
EXPLICIT SUBEXPRESSION PARSER REJECTED KEY `:'
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `{'
     OF SUBTYPE ll::parser::table::opening_bracket_type
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `<+'
     OF SUBTYPE ll::parser::table::opening_bracket_type
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `+>'
     OF SUBTYPE ll::parser::table::closing_bracket_type
BRACKETED EXPRESSION: SHORT_OBJ; line 36:
     { <+ x +> <- y ->} `<+ x +> <- y ->'
       ^^^^^^^
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `}'
     OF SUBTYPE ll::parser::table::closing_bracket_type
BRACKETED EXPRESSION: SHORT_OBJ; line 36:
     { <+ x +> <- y ->} `<+ x +> <- y ->'
     ^^^^^^^^^^^^^^^^^^
EXPLICIT SUBEXPRESSION PARSER FOUND KEY ``'
     OF SUBTYPE ll::parser::table::opening_bracket_type
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `<-'
     OF SUBTYPE ll::parser::table::opening_bracket_type
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `->'
     OF SUBTYPE ll::parser::table::closing_bracket_type
BRACKETED EXPRESSION: SHORT_OBJ; line 36:
     { <+ x +> <- y ->} `<+ x +> <- y ->'
                                 ^^^^^^^
EXPLICIT SUBEXPRESSION PARSER FOUND KEY `''
     OF SUBTYPE ll::parser::table::closing_bracket_type
BRACKETED EXPRESSION: SHORT_OBJ; line 36:
     { <+ x +> <- y ->} `<+ x +> <- y ->'
                        ^^^^^^^^^^^^^^^^^
BRACKETED EXPRESSION: SHORT_OBJ; lines 35-36:
This tests selector changes: <+ x +> <- y ->
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     { <+ x +> <- y ->} `<+ x +> <- y ->'
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
